# d4g-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CleanText.py  OWL_API_Connect.ipynb  README.md  ask_LLM.py  build_index_postings.py  chetah_utils.py  chetah_v1.py  chetah_v2.py  configuration.ini  disaster_detection.py  disaster_detection_new.py  flask_integration_test.py  get_file_metadata.py  hangul - copia.py  hangul.py  html_to_markdown.py  index.py  keyword_detection.py  langcode_to_name.py  lighthouse.py  location_detection.py  main.py  models.py  navigate_reports.py  new_disaster_detection.py  owl.py  process_reports.py  pyproject.toml  report_type.py  requirements.txt  sanitizer.py  secret.py  sentence_ranking.py  summary_generation.py  summary_generation_lightBUTbad.py  test_sanitizer.py  theme_detection.py  (+4 more)
.github/ISSUE_TEMPLATE/: daily-standup-template.md
.github/workflows/: test.yml
chetah_library/: NavigateReports.py  navigate_reports.py  test.txt  tokenize_json_files.py
disaster_detection/: checking_retrieval.py  data_analysis_notes  disaster_detection.py  disaster_method.py  dummy_set.csv  pair_count_sorted.csv  test_set.csv  training_data_analysis.py  training_retrieval.py
docs/design/: 2026-04-10-fastapi-restructuring.md  2026-04-13-socrates-v2-architecture.md  2026-04-13-socrates-v2-plan.md
docs/superpowers/plans/: 2025-05-23-socrates-isolated-db.md  2025-05-23-socrates-refine-node.md  2025-05-23-socrates-schemas.md  2025-05-23-socrates-verification-tests.md  2026-05-14-pythonanywhere-wrapper.md
scripts/: tokenize_json_files.py
src/: main.py
src/auth/: router.py  schemas.py
src/chetah/: chetah_utils.py  chetah_v1.py  chetah_v2.py  router.py  schemas.py  service.py
src/core/: config.py  settings.py
src/hangul/: router.py  schemas.py  service.py
src/lighthouse/: lighthouse.py  router.py  schemas.py  service.py
src/owl/: owl.py  router.py  schemas.py  service.py
src/shared/: CleanText.py  ask_LLM.py  ask_llm.py  clean_text.py  disaster_detection.py  get_file_metadata.py  html_to_markdown.py  keyword_detection.py  langcode_to_name.py  llm_factory.py  location_detection.py  new_disaster_detection.py  report_type.py  sanitizer.py  sentence_ranking.py  session.py  summary_generation.py  theme_detection.py  title_detection.py
src/shared/models/: Model_RW_ThemeDetect.pkl
src/socrates/: router.py  schemas.py  service.py
src/socrates/nodes/: action_draft.py  classify.py  dialectic.py  evaluator.py  refine.py  utils.py
src/summary/: router.py  schemas.py  service.py
tests/: test_chetah.py  test_hangul.py  test_lighthouse.py  test_main.py  test_owl.py  test_socrates.py  test_socrates_dialectic.py  test_socrates_refine.py  test_socrates_router.py  test_socrates_schemas.py  test_socrates_service_integration.py  test_summary.py
tests/integration/: test_chetah.py  test_hangul.py  test_lighthouse.py  test_owl.py  test_socrates_api.py  test_summary.py
tests/unit/: test_owl_logic.py  test_socrates_nodes.py  test_summary_logic.py
