[project]
name = "d4g-backend"
version = "0.1.0"
description = "Restructured FastAPI backend for Data4Good-UMich"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=3.6.2",
    "asttokens>=2.0.5",
    "beautifulsoup4>=4.12.2",
    "blinker>=1.7.0",
    "blis>=0.7.9",
    "bs4>=0.0.1",
    "catalogue>=2.0.8",
    "certifi>=2024.2.2",
    "cffi>=1.15.1",
    "charset-normalizer>=3.1.0",
    "click>=8.1.3",
    "cloudpathlib>=0.16.0",
    "colorama>=0.4.6",
    "confection>=0.0.4",
    "contourpy>=1.2.1",
    "cryptography>=41.0.5",
    "cycler>=0.11.0",
    "cymem>=2.0.7",
    "deprecation>=2.1.0",
    "en-core-web-md",
    "en-core-web-sm",
    "exceptiongroup>=1.1.1",
    "executing>=0.8.3",
    "fastapi>=0.100.0",
    "filelock>=3.12.2",
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "fonttools>=4.34.4",
    "fsspec>=2024.2.0",
    "gitdb>=4.0.11",
    "gitpython>=3.1.42",
    "google-genai>=1.3.0",
    "gradio-client>=2.3.0",
    "graphviz>=0.20.1",
    "html2text>=2020.1.16",
    "httpx>=0.28.1",
    "huggingface-hub>=0.21.3",
    "icecream>=2.1.3",
    "idna>=3.4",
    "iniconfig>=2.0.0",
    "iso-639>=0.4.5",
    "iso3166>=2.1.1",
    "itsdangerous>=2.1.2",
    "jellyfish>=0.11.2",
    "jinja2>=3.1.2",
    "joblib>=1.2.0",
    "kiwisolver>=1.4.4",
    "langcodes>=3.3.0",
    "langdetect>=1.0.7",
    "langgraph>=0.0.15",
    "langgraph-checkpoint-postgres>=1.0.0",
    "language-data>=1.2.0",
    "lxml>=4.9.2",
    "marisa-trie>=1.2.0",
    "markdownify>=0.11.6",
    "markupsafe>=2.1.2",
    "matplotlib>=3.5.3",
    "murmurhash>=1.0.9",
    "networkx>=3.1",
    "nltk>=3.8.1",
    "numpy>=1.24.3",
    "packaging>=23.1",
    "pandas>=2.0.1",
    "pdfminer-six>=20221105",
    "pdfplumber>=0.10.4",
    "pickleshare>=0.7.5",
    "pikepdf>=8.5.1",
    "pillow>=10.3.0",
    "pip>=24.0",
    "pluggy>=1.0.0",
    "preshed>=3.0.8",
    "psutil>=5.9.1",
    "psycopg2-binary>=2.9.11",
    "pycountry-convert>=0.7.2",
    "pycparser>=2.21",
    "pydantic>=2.0.0",
    "pygments>=2.16.1",
    "pymupdf>=1.23.5",
    "pymupdfb>=1.23.5",
    "pyparsing>=3.1.0",
    "pytest>=8.0.0",
    "pytextrank>=3.3.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.2.2",
    "pytz>=2023.3",
    "pyyaml>=6.0",
    "regex>=2023.5.5",
    "requests>=2.31.0",
    "safetensors>=0.4.2",
    "scikit-learn>=1.2.2",
    "scikit-multilearn>=0.2.0",
    "scipy>=1.10.1",
    "segtok>=1.5.11",
    "sentence-transformers>=3.1.1",
    "setuptools>=70.0.0",
    "six>=1.16.0",
    "smart-open>=6.3.0",
    "smmap>=5.0.1",
    "sniffio>=1.3.0",
    "soupsieve>=2.4.1",
    "spacy>=3.7.0",
    "spacy-langdetect>=0.1.2",
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.4",
    "srsly>=2.4.6",
    "starlette>=0.27.0",
    "tabulate>=0.9.0",
    "thinc>=8.1.10",
    "threadpoolctl>=3.1.0",
    "tika>=2.6.0",
    "tokenizers>=0.15.2",
    "tomli>=2.0.1",
    "torch>=1.12.0",
    "tqdm>=4.65.0",
    "transformers>=4.38.1",
    "typer>=0.7.0",
    "typing-extensions>=4.5.0",
    "tzdata>=2023.3",
    "urllib3>=1.26.16",
    "wasabi>=1.1.1",
    "weasel>=0.3.4",
    "werkzeug>=2.3.7",
    "wheel>=0.43.0",
    "yake>=0.4.8",
    "uvicorn>=0.22.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-asyncio>=0.21.0",
    "a2wsgi>=1.10.10",
    "gunicorn>=26.0.0",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = [
    "PLR0913", "PLR0912", "PLR0915", "PLW0603", "PLC0415", "PLR2004",
    "E501", "N802", "N803", "N806", "B905", "B008", "F841", "E722",
    "E402", "E701", "PLR1722", "N816", "B904"
]
[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "flask_cors.*",
    "pandas.*",
    "spacy.*",
    "spacy_langdetect.*",
    "bs4.*",
    "fitz.*",
    "tika.*",
    "nltk.*",
    "pytextrank.*",
    "google.genai.*",
    "gradio_client.*",
    "pdfplumber.*",
    "huggingface_hub.*",
    "iso3166.*",
    "pycountry_convert.*",
    "sklearn.*",
    "scipy.*",
    "segtok.*",
    "sentence_transformers.*",
    "yake.*",
    "asttokens.*",
    "matplotlib.*",
    "psutil.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl" }
